# my-machine

./: CMakeLists.txt  README.md  main.cpp
include/: EB_Device.h  lever.h  myMachine.h
src/: EB_Device.cpp  lever.cpp  myMachine.cpp
tests/: CMakeLists.txt  testMyHomework.cpp
